--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -21,7 +21,7 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
           SECTION_NAME: waka
-          BLOCKS: all
+          BLOCKS: ">-"
           CODE_LANG: rust
           TIME_RANGE: all_time
           LANG_COUNT: 10
