--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -29,7 +29,7 @@ jobs:
           SHOW_TOTAL: true
           SHOW_MASKED_TIME: true
           STOP_AT_OTHER: true
-          IGNORED_LANGUAGES: YAML JSON TOML CSS XML
+          IGNORED_LANGUAGES: YAML JSON TOML CSS SCSS XML HTML
           TARGET_BRANCH: master
           TARGET_PATH: README.md
           COMMITTER_NAME: GitHubActionBot
